cmake_minimum_required(VERSION 3.17)
project(cs3013_os_principle C)

set(CMAKE_C_STANDARD 99)

add_executable(ex_1_m1 ex_1/m1.c)
add_executable(ex_1_m2 ex_1/m2.c)
add_executable(ex_1_m3_1 ex_1/m3_1.c)
add_executable(ex_1_m3_2 ex_1/m3_2.c)

add_executable(ex_2_m1 ex_2/m1.c)
add_executable(ex_2_m2 ex_2/m2.c)
add_executable(ex_2_m3 ex_2/m3.c)
add_executable(ex_2_m4 ex_2/m4.c)
add_executable(ex_2_m5 ex_2/m5.c)

add_executable(ex_3 ex_3/emulate.c)

add_executable(ex_4_m1 ex_4/m1.c)
add_executable(ex_4_m2 ex_4/m2.c)
add_executable(ex_4_m3 ex_4/m3.c)

add_executable(ex_5_m1 ex_5/m1.c)
add_executable(ex_5_m2 ex_5/m2.c)
add_executable(ex_5_m3 ex_5/m3.c)
add_executable(ex_5_m4 ex_5/m4.c)
add_executable(ex_5_m5 ex_5/m5.c)
