cmake_minimum_required(VERSION 3.17)
project(cs3013_os_principle C)

set(CMAKE_C_STANDARD 99)

add_executable(a_ex1_m1 part_a/ex_1/m1.c)
add_executable(a_ex1_m2 part_a/ex_1/m2.c)
add_executable(a_ex1_m3_1 part_a/ex_1/m3_1.c)
add_executable(a_ex1_m3_2 part_a/ex_1/m3_2.c)

add_executable(a_ex2 part_a/ex_2/emulate.c)
add_executable(a_ex3 part_a/ex_3/emulate.c)
add_executable(a_ex4 part_a/ex_4/signal.c)

add_executable(b_ex1_m1 part_b/ex_1/m1.c)
add_executable(b_ex1_m2 part_b/ex_1/m2.c)
add_executable(b_ex1_m3 part_b/ex_1/m3.c)
add_executable(b_ex1_m4 part_b/ex_1/m4.c)
add_executable(b_ex1_m5 part_b/ex_1/m5.c)

add_executable(b_ex3_m1 part_b/ex_3/m1.c)
add_executable(b_ex3_m2 part_b/ex_3/m2.c)
add_executable(b_ex3_m3 part_b/ex_3/m3.c)

add_executable(b_ex4_m1 part_b/ex_4/m1.c)
add_executable(b_ex4_m2 part_b/ex_4/m2.c)
add_executable(b_ex4_m3 part_b/ex_4/m3.c)
add_executable(b_ex4_m4 part_b/ex_4/m4.c)
add_executable(b_ex4_m5 part_b/ex_4/m5.c)
